Translate last few texts

--- a/src/app/homepage.component.html
+++ b/src/app/homepage.component.html
@@ -636,7 +636,7 @@
             </div>
             <div id="collapseSix" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
               <div class="panel-body">
-                <h4>Jean-Christophe Ferry et Thomas Cordival</h4>
+                <h4>Jean-Christophe Ferry & Thomas Cordival</h4>
                 <h5>{{"OBJ" | translate}} </h5>
                 <p>{{"LM_URSI_text1" | translate }}</p>
                 <p>{{"LM_URSI_text2" | translate }}</p>
@@ -698,7 +698,7 @@
             </div>
             <div id="collapseNine" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
               <div class="panel-body">
-                <h4>Frédéric Fourdrinier et Yannick Neff</h4>
+                <h4>Frédéric Fourdrinier & Yannick Neff</h4>
                 <h5>{{"OBJ" | translate}} </h5>
                 <p>{{"LM_SOAR_text1" | translate}}</p>
                 <p>{{"LM_SOAR_text2" | translate}}</p>
@@ -766,7 +766,7 @@
             </div>
             <div id="collapseTwelve" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
               <div class="panel-body">
-                <h4>François Chazal et Issame El Kharbili</h4>
+                <h4>François Chazal & Issame El Kharbili</h4>
                 <h5>{{"OBJ" | translate}} </h5>
                 <p>{{"LM_MEPA_text1" | translate}}</p>
                 <p>{{"LM_MEPA_text2" | translate}}</p>
@@ -960,7 +960,7 @@
             </div>
             <div id="collapseTwentyTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingSeven">
               <div class="panel-body">
-                <h4>Frédéric Fourdrinier et Hervé Durand</h4>
+                <h4>Frédéric Fourdrinier & Hervé Durand</h4>
                 <h5>{{"OBJ" | translate}} </h5>
                 <p>{{"LM_PERS_text1" | translate}} </p>
                 <p>{{"LM_PERS_text2" | translate}}</p>
@@ -1271,7 +1271,7 @@
       <div class="container">
           <div class="row">
               <div class="col-lg-3  col-md-3 col-sm-6 col-xs-12">
-                  <h3> Les majeures</h3>
+                  <h3> {{"Maj" | translate }}</h3>
                   <ul>
                       <li> <a href="http://www.epita.fr/cursus-cycle-ingenieur-majeures.aspx">{{"MTI" | translate}}</a> </li>
                       <li> <a href="http://www.epita.fr/cursus-cycle-ingenieur-majeures.aspx">{{"CSI" | translate}} </a> </li>
@@ -1289,7 +1289,7 @@
                   </ul>
               </div>
               <div class="col-lg-3  col-md-3 col-sm-6 col-xs-12">
-                  <h3> Laboratoires </h3>
+                  <h3> {{"Labs" | translate}} </h3>
                   <ul>
                       <li> <a href="https://www.3ie.fr">{{"3IE" | translate}} </a> </li>
                       <li> <a href="https://www.lrde.epita.fr/wiki/Main_Page"> {{"LRDE" | translate}} </a> </li>
