change favicon and add code structure for arla course

--- a/src/app/homepage.component.html
+++ b/src/app/homepage.component.html
@@ -746,11 +746,11 @@
             </div>
             <div id="collapseEleven" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
               <div class="panel-body">
-                <h4>Lucas Boisserie</h4>
+                <h4>Lucas Boisserie & Florent Fauchille</h4>
                 <h5>{{"OBJ" | translate}} </h5>
-                <p></p>
-                <p></p>
-                <p></p>
+                <p>{{ "LM_ARLA_text1" | translate}}</p>
+                <p>{{ "LM_ARLA_text2" | translate}}</p>
+                <p>{{ "LM_ARLA_text3" | translate}}</p>
               </div>
             </div>
           </div>
