add strategy consultant in opportunities

--- a/src/app/homepage.component.html
+++ b/src/app/homepage.component.html
@@ -1078,6 +1078,7 @@
                 <li>{{"Dir" | translate}}</li>
                 <li>{{"DirProd" | translate}}</li>
                 <li>{{"ConsOrga" | translate}}</li>
+                <li>{{"ConsStrat" | translate}}</li>
                 <li><br/></li>
 
               </ul>
