Put the same number of courses in L&M=C&A and M&A=D&T

--- a/src/app/homepage.component.html
+++ b/src/app/homepage.component.html
@@ -614,6 +614,25 @@
             </div>
           </div>
           <!-- /.collapse-4 -->
+          <div class="panel panel-default">
+            <div class="panel-heading" role="tab" id="headingSix">
+              <h4 class="panel-title">
+                <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwentyOne" aria-expanded="false"
+                  aria-controls="collapseTwentyOne">
+                                            {{ "LM_METH" | translate}}
+                                        </a>
+              </h4>
+            </div>
+            <div id="collapseTwentyOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingSix">
+              <div class="panel-body">
+                <h4>Hervé Durand</h4>
+                <h5>{{"OBJ" | translate}} </h5>
+                <p>{{"LM_METH_text1" | translate}}</p>
+                <p>{{"LM_METH_text2" | translate}}</p>
+                <p>{{"LM_METH_text3" | translate}}</p>
+              </div>
+            </div>
+          </div>
 
         </div>
         <!-- /.accordion -->
@@ -706,6 +725,26 @@
             </div>
           </div>
           <!-- /.collapse-4 -->
+          <div class="panel panel-default">
+            <div class="panel-heading" role="tab" id="headingSeven">
+              <h4 class="panel-title">
+                <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwentyTwo" aria-expanded="false"
+                  aria-controls="collapseTwentyTwo">
+                                            {{ "LM_PERS" | translate}}
+                                        </a>
+              </h4>
+            </div>
+            <div id="collapseTwentyTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingSeven">
+              <div class="panel-body">
+                <h4>Frédéric Fourdrinier & Hervé Durand</h4>
+                <h5>{{"OBJ" | translate}} </h5>
+                <p>{{"LM_PERS_text1" | translate}} </p>
+                <p>{{"LM_PERS_text2" | translate}}</p>
+                <p>{{"LM_PERS_text3" | translate}}</p>
+              </div>
+            </div>
+          </div>
+          <!-- /.collapse-5f -->
 
         </div>
         <!-- /.accordion -->
@@ -906,69 +945,6 @@
           </div>
           <!-- /.collapse-4 -->
 
-
-
-          <div class="panel panel-default">
-            <div class="panel-heading" role="tab" id="headingFive">
-              <h4 class="panel-title">
-                <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwenty" aria-expanded="false"
-                  aria-controls="collapseTwenty">
-                                            {{ "LM_VIT2" | translate}}
-                                        </a>
-              </h4>
-            </div>
-            <div id="collapseTwenty" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFive">
-              <div class="panel-body">
-                <h4></h4>
-                <h5>{{"OBJ" | translate}} </h5>
-                <p>{{"LM_VIT2_text1" | translate}}</p>
-                <p>{{"LM_VIT2_text2" | translate}}</p>
-                <p>{{"LM_VIT2_text3" | translate}}</p>
-              </div>
-            </div>
-          </div>
-          <!-- /.collapse-5 -->
-
-          <div class="panel panel-default">
-            <div class="panel-heading" role="tab" id="headingSix">
-              <h4 class="panel-title">
-                <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwentyOne" aria-expanded="false"
-                  aria-controls="collapseTwentyOne">
-                                            {{ "LM_METH" | translate}}
-                                        </a>
-              </h4>
-            </div>
-            <div id="collapseTwentyOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingSix">
-              <div class="panel-body">
-                <h4>Hervé Durand</h4>
-                <h5>{{"OBJ" | translate}} </h5>
-                <p>{{"LM_METH_text1" | translate}}</p>
-                <p>{{"LM_METH_text2" | translate}}</p>
-                <p>{{"LM_METH_text3" | translate}}</p>
-              </div>
-            </div>
-          </div>
-          <!-- /.collapse-6 -->
-          <div class="panel panel-default">
-            <div class="panel-heading" role="tab" id="headingSeven">
-              <h4 class="panel-title">
-                <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwentyTwo" aria-expanded="false"
-                  aria-controls="collapseTwentyTwo">
-                                            {{ "LM_PERS" | translate}}
-                                        </a>
-              </h4>
-            </div>
-            <div id="collapseTwentyTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingSeven">
-              <div class="panel-body">
-                <h4>Frédéric Fourdrinier & Hervé Durand</h4>
-                <h5>{{"OBJ" | translate}} </h5>
-                <p>{{"LM_PERS_text1" | translate}} </p>
-                <p>{{"LM_PERS_text2" | translate}}</p>
-                <p>{{"LM_PERS_text3" | translate}}</p>
-              </div>
-            </div>
-          </div>
-          <!-- /.collapse-7 -->
         </div>
         <!-- /.accordion -->
       </div>
