Modification logo page d'accueil, ajout de la traduction d'arla, modification sur l'emplacement des cours

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -37,15 +37,11 @@
           <a class="page-scroll" href="#socials">{{'Social' | translate}}</a>
         </li>
         <li>
-          <a class="page-scroll" href="https://sigl.epita.fr/">Intranet</a>
+         <img  height="24" width="24" style="margin: 15px 0 15px 0" (click)="changeLanguage('fr')" src="../assets/images/flag/France.png"/>
         </li>
         <li>
-         <img  height="24" width="24" style="margin: 5px" (click)="changeLanguage('fr')" src="assets/images/flag/France.png"/>
+          <img height="24" width="24" style="margin: 15px 0 15px 4px" (click)="changeLanguage('en')" src="./assets/images/flag/England.png"/>
         </li>
-        <li>
-          <img height="24" width="24" style="margin: 5px" (click)="changeLanguage('en')" src="assets/images/flag/England.png"/>
-        </li>
-        
       </ul>
     </div>
   </div>
