--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -37,10 +37,13 @@
           <a class="page-scroll" href="#socials">{{'Social' | translate}}</a>
         </li>
         <li>
-         <img  height="24" width="24" style="margin: 15px 0 15px 0" (click)="changeLanguage('fr')" src="./assets/images/flag/France.png"/>
+          <a class="page-scroll" href="http://intra.sigl.epita.fr">Intranet</a>
         </li>
         <li>
-          <img height="24" width="24" style="margin: 15px 0 15px 4px" (click)="changeLanguage('en')" src="./assets/images/flag/England.png"/>
+          <img  height="24" width="24" style="margin: 15px 0 15px 10px" (click)="changeLanguage('fr')" src="./assets/images/flag/France.png"/>
+        </li>
+        <li>
+          <img height="24" width="24" style="margin: 15px 0 15px 10px" (click)="changeLanguage('en')" src="./assets/images/flag/England.png"/>
         </li>
       </ul>
     </div>
