Update courses list & add EPITA logo in footer

--- a/src/app/homepage.component.html
+++ b/src/app/homepage.component.html
@@ -530,10 +530,6 @@
 </section>
 
 
-
-
-
-
 <section id="faq" class="faq white-bg">
   <div class="container">
     <div class="row">
@@ -636,27 +632,7 @@
             </div>
           </div>
           <!-- /.collapse-4 -->
-          <div class="panel panel-default">
-            <div class="panel-heading" role="tab" id="headingThree">
-              <h4 class="panel-title">
-                <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseEighteen" aria-expanded="false"
-                  aria-controls="collapseEighteen">
-                  {{ "LM_PMDE" | translate}}
-                </a>
-              </h4>
-            </div>
-            <div id="collapseEighteen" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
-              <div class="panel-body">
-                <h4>Julien Guisset</h4>
-                <h5>{{"OBJ" | translate}} </h5>
-                <p>{{"LM_PMDE_text1" | translate}}</p>
-                <p>{{"LM_PMDE_text2" | translate}}</p>
-                <p>{{"LM_PMDE_text3" | translate}}</p>
-              </div>
-            </div>
-          </div>
 
-         
         </div>
         <!-- /.accordion -->
       </div>
@@ -670,13 +646,13 @@
           <div class="panel panel-default">
             <div class="panel-heading" role="tab" id="headingOne">
               <h4 class="panel-title">
-                <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseSix" aria-expanded="false"
-                  aria-controls="collapseSix">
+                <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFive" aria-expanded="false"
+                  aria-controls="collapseFive">
                   {{ "LM_URSI" | translate}}
                 </a>
               </h4>
             </div>
-            <div id="collapseSix" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
+            <div id="collapseFive" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
               <div class="panel-body">
                 <h4>Jean-Christophe Ferry & Thomas Cordival</h4>
                 <h5>{{"OBJ" | translate}} </h5>
@@ -691,13 +667,13 @@
           <div class="panel panel-default">
             <div class="panel-heading" role="tab" id="headingTwo">
               <h4 class="panel-title">
-                <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseSeven" aria-expanded="false"
-                  aria-controls="collapseSeven">
+                <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseSix" aria-expanded="false"
+                  aria-controls="collapseSix">
                   {{ "LM_VIT1" | translate}}
                 </a>
               </h4>
             </div>
-            <div id="collapseSeven" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
+            <div id="collapseSix" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
               <div class="panel-body">
                 <h4>Charles Henry & Aurélien Legrand</h4>
                 <h5>{{"OBJ" | translate}} </h5>
@@ -705,6 +681,9 @@
                 <p>{{"LM_VIT1_text2" | translate}}</p>
                 <p>{{"LM_VIT1_text3" | translate}}</p>
                 <p>{{"LM_VIT1_text4" | translate}}</p>
+                <p>{{"LM_VIT1_text5" | translate}}</p>
+                <p>{{"LM_VIT1_text6" | translate}}</p>
+                <p>{{"LM_VIT1_text7" | translate}}</p>
               </div>
             </div>
           </div>
@@ -712,13 +691,13 @@
           <div class="panel panel-default">
             <div class="panel-heading" role="tab" id="headingThree">
               <h4 class="panel-title">
-                <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseEight" aria-expanded="false"
-                  aria-controls="collapseEight">
+                <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseSeven" aria-expanded="false"
+                  aria-controls="collapseSeven">
                   {{ "LM_ARCL" | translate}}
                 </a>
               </h4>
             </div>
-            <div id="collapseEight" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
+            <div id="collapseSeven" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
               <div class="panel-body">
                 <h4>Yannick Neff</h4>
                 <h5>{{"OBJ" | translate}} </h5>
@@ -732,13 +711,13 @@
           <div class="panel panel-default">
             <div class="panel-heading" role="tab" id="headingFour">
               <h4 class="panel-title">
-                <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseNine" aria-expanded="false"
-                  aria-controls="collapseNine">
+                <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseEight" aria-expanded="false"
+                  aria-controls="collapseEight">
                   {{ "LM_SOAR" | translate}}
                 </a>
               </h4>
             </div>
-            <div id="collapseNine" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
+            <div id="collapseEight" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
               <div class="panel-body">
                 <h4>Frédéric Fourdrinier & Yannick Neff</h4>
                 <h5>{{"OBJ" | translate}} </h5>
@@ -748,26 +727,6 @@
             </div>
           </div>
           <!-- /.collapse-4 -->
-          <div class="panel panel-default">
-            <div class="panel-heading" role="tab" id="headingSeven">
-              <h4 class="panel-title">
-                <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwentyTwo" aria-expanded="false"
-                  aria-controls="collapseTwentyTwo">
-                  {{ "LM_PERS" | translate}}
-                </a>
-              </h4>
-            </div>
-            <div id="collapseTwentyTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingSeven">
-              <div class="panel-body">
-                <h4>Frédéric Fourdrinier & Hervé Durand</h4>
-                <h5>{{"OBJ" | translate}} </h5>
-                <p>{{"LM_PERS_text1" | translate}} </p>
-                <p>{{"LM_PERS_text2" | translate}}</p>
-                <p>{{"LM_PERS_text3" | translate}}</p>
-              </div>
-            </div>
-          </div>
-          <!-- /.collapse-5f -->
 
         </div>
         <!-- /.accordion -->
@@ -800,13 +759,13 @@
           <div class="panel panel-default">
             <div class="panel-heading" role="tab" id="headingOne">
               <h4 class="panel-title">
-                <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseEleven" aria-expanded="false"
-                  aria-controls="collapseEleven">
+                <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseNine" aria-expanded="false"
+                  aria-controls="collapseNine">
                   {{ "LM_ARLA" | translate}}
                 </a>
               </h4>
             </div>
-            <div id="collapseEleven" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
+            <div id="collapseNine" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
               <div class="panel-body">
                 <h4>Lucas Boisserie & Florent Fauchille</h4>
                 <h5>{{"OBJ" | translate}} </h5>
@@ -820,13 +779,13 @@
           <div class="panel panel-default">
             <div class="panel-heading" role="tab" id="headingTwo">
               <h4 class="panel-title">
-                <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwelve" aria-expanded="false"
-                  aria-controls="collapseTwelve">
+                <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTen" aria-expanded="false"
+                  aria-controls="collapseTen">
                   {{ "LM_MEPA" | translate}}
                 </a>
               </h4>
             </div>
-            <div id="collapseTwelve" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
+            <div id="collapseTen" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
               <div class="panel-body">
                 <h4>François Chazal & Issame El Kharbili</h4>
                 <h5>{{"OBJ" | translate}} </h5>
@@ -840,13 +799,13 @@
           <div class="panel panel-default">
             <div class="panel-heading" role="tab" id="headingThree">
               <h4 class="panel-title">
-                <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThirteen" aria-expanded="false"
-                  aria-controls="collapseThirteen">
+                <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseEleven" aria-expanded="false"
+                  aria-controls="collapseEleven">
                   {{ "LM_ACOO" | translate}}
                 </a>
               </h4>
             </div>
-            <div id="collapseThirteen" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
+            <div id="collapseEleven" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
               <div class="panel-body">
                 <h4>Robin Duval</h4>
                 <h5>{{"OBJ" | translate}} </h5>
@@ -858,17 +817,36 @@
             </div>
           </div>
           <!-- /.collapse-3 -->
-
+          <div class="panel panel-default">
+            <div class="panel-heading" role="tab" id="headingFour">
+              <h4 class="panel-title">
+                <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwelve" aria-expanded="false"
+                  aria-controls="collapseTwelve">
+                  {{ "LM_NLPF" | translate}}
+                </a>
+              </h4>
+            </div>
+            <div id="collapseTwelve" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
+              <div class="panel-body">
+                <h4>Robin Duval</h4>
+                <h5>{{"OBJ" | translate}} </h5>
+                <p>{{"LM_NLPF_text1" | translate }}</p>
+                <p>{{"LM_NLPF_text2" | translate }}</p>
+                <p>{{"LM_NLPF_text3" | translate }}</p>
+              </div>
+            </div>
+          </div>
+          <!-- /.collapse-4 -->
           <div class="panel panel-default">
             <div class="panel-heading" role="tab" id="headingFive">
               <h4 class="panel-title">
-                <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFiveteen" aria-expanded="false"
-                  aria-controls="collapseFiveteen">
+                <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThirteen" aria-expanded="false"
+                  aria-controls="collapseThirteen">
                   {{ "LM_DEVO" | translate}}
                 </a>
               </h4>
             </div>
-            <div id="collapseFiveteen" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFive">
+            <div id="collapseThirteen" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFive">
               <div class="panel-body">
                 <h4>Lucas Boisserie</h4>
                 <h5>{{"OBJ" | translate}} </h5>
@@ -878,6 +856,7 @@
             </div>
           </div>
           <!-- /.collapse-5 -->
+        
         </div>
         <!-- /.accordion -->
       </div>
@@ -891,13 +870,13 @@
           <div class="panel panel-default">
             <div class="panel-heading" role="tab" id="headingOne">
               <h4 class="panel-title">
-                <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseSixteen" aria-expanded="false"
-                  aria-controls="collapseSixteen">
+                <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFourteen" aria-expanded="false"
+                  aria-controls="collapseFourteen">
                   {{ "LM_ACCC" | translate}}
                 </a>
               </h4>
             </div>
-            <div id="collapseSixteen" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
+            <div id="collapseFourteen" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
               <div class="panel-body">
                 <h4>Antoine Tallon</h4>
                 <h5>{{"OBJ" | translate}} </h5>
@@ -910,13 +889,13 @@
           <div class="panel panel-default">
             <div class="panel-heading" role="tab" id="headingTwo">
               <h4 class="panel-title">
-                <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseSeventeen" aria-expanded="false"
-                  aria-controls="collapseSeventeen">
+                <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFifteen" aria-expanded="false"
+                  aria-controls="collapseFifteen">
                   {{ "LM_INNO" | translate}}
                 </a>
               </h4>
             </div>
-            <div id="collapseSeventeen" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
+            <div id="collapseFifteen" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
               <div class="panel-body">
 
                 <h4>Antoine Tallon</h4>
@@ -927,22 +906,22 @@
             </div>
           </div>
           <!-- /.collapse-2 -->
-           <div class="panel panel-default">
-            <div class="panel-heading" role="tab" id="headingSix">
+          <div class="panel panel-default">
+            <div class="panel-heading" role="tab" id="headingThree">
               <h4 class="panel-title">
-                <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwentyOne" aria-expanded="false"
-                  aria-controls="collapseTwentyOne">
-                  {{ "LM_METH" | translate}}
+                <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseSixteen" aria-expanded="false"
+                  aria-controls="collapseSixteen">
+                  {{ "LM_PMDE" | translate}}
                 </a>
               </h4>
             </div>
-            <div id="collapseTwentyOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingSix">
+            <div id="collapseSixteen" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
               <div class="panel-body">
-                <h4>Hervé Durand</h4>
+                <h4>Julien Guisset</h4>
                 <h5>{{"OBJ" | translate}} </h5>
-                <p>{{"LM_METH_text1" | translate}}</p>
-                <p>{{"LM_METH_text2" | translate}}</p>
-                <p>{{"LM_METH_text3" | translate}}</p>
+                <p>{{"LM_PMDE_text1" | translate}}</p>
+                <p>{{"LM_PMDE_text2" | translate}}</p>
+                <p>{{"LM_PMDE_text3" | translate}}</p>
               </div>
             </div>
           </div>
@@ -950,13 +929,13 @@
           <div class="panel panel-default">
             <div class="panel-heading" role="tab" id="headingFour">
               <h4 class="panel-title">
-                <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseNineteen" aria-expanded="false"
-                  aria-controls="collapseNineteen">
+                <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseSeventeen" aria-expanded="false"
+                  aria-controls="collapseSeventeen">
                   {{ "LM_DIGI" | translate}}
                 </a>
               </h4>
             </div>
-            <div id="collapseNineteen" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
+            <div id="collapseSeventeen" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
               <div class="panel-body">
                 <h4>Julien Guisset</h4>
                 <h5>{{"OBJ" | translate}} </h5>
@@ -967,6 +946,46 @@
             </div>
           </div>
           <!-- /.collapse-4 -->
+          <div class="panel panel-default">
+            <div class="panel-heading" role="tab" id="headingFive">
+              <h4 class="panel-title">
+                <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseEighteen" aria-expanded="false"
+                  aria-controls="collapseEighteen">
+                  {{ "LM_METH" | translate}}
+                </a>
+              </h4>
+            </div>
+            <div id="collapseEighteen" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFive">
+              <div class="panel-body">
+                <h4>Hervé Durand</h4>
+                <h5>{{"OBJ" | translate}} </h5>
+                <p>{{"LM_METH_text1" | translate}}</p>
+                <p>{{"LM_METH_text2" | translate}}</p>
+                <p>{{"LM_METH_text3" | translate}}</p>
+              </div>
+            </div>
+          </div>
+          <!-- /.collapse-5 -->
+          <div class="panel panel-default">
+            <div class="panel-heading" role="tab" id="headingSix">
+              <h4 class="panel-title">
+                <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseNineteen" aria-expanded="false"
+                  aria-controls="collapseNineteen">
+                  {{ "LM_PERS" | translate}}
+                </a>
+              </h4>
+            </div>
+            <div id="collapseNineteen" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingSix">
+              <div class="panel-body">
+                <h4>Frédéric Fourdrinier & Hervé Durand</h4>
+                <h5>{{"OBJ" | translate}} </h5>
+                <p>{{"LM_PERS_text1" | translate}} </p>
+                <p>{{"LM_PERS_text2" | translate}}</p>
+                <p>{{"LM_PERS_text3" | translate}}</p>
+              </div>
+            </div>
+          </div>
+          <!-- /.collapse-6 -->
 
         </div>
         <!-- /.accordion -->
@@ -1269,9 +1288,12 @@
   <div class="panel panel-default" id="footer">
     <div class="container">
       <div class="row">
-       
         <div class="col-lg-3  col-md-3 col-sm-6 col-xs-12">
-          <li> <a  href="http://www.epita.fr">Epita</a> </li> 
+          <li> 
+            <a href="http://www.epita.fr" target="_blank">
+              <img class="logoFooter" src="assets/images/Epita.png" alt="EPITA">
+            </a>
+          </li> 
        </div>
         <!--
             -              <div class="col-lg-3  col-md-3 col-sm-6 col-xs-12 ">
