Update VIRT teachers name

--- a/src/app/homepage.component.html
+++ b/src/app/homepage.component.html
@@ -708,7 +708,7 @@
                         </div>
                         <div id="collapseSix" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
                             <div class="panel-body">
-                                <h4>Charles Henry & Aurélien Legrand</h4>
+                                <h4>Aurélien Legrand</h4>
                                 <h5>{{"OBJ" | translate}} </h5>
                                 <p>{{"LM_VIT1_text1" | translate}}</p>
                                 <p>{{"LM_VIT1_text2" | translate}}</p>
