--- a/src/app/homepage.component.html
+++ b/src/app/homepage.component.html
@@ -23,6 +23,16 @@
 <!-- </section> -->
 <section id="hero">
     <div class="wrap-hero-content">
+        <div class="hero-content">
+            <h1>
+                <a>
+                    <img class="animation" src="assets/images/LOGO_SIGL.png" style="max-width:35%" alt="logo">
+                </a>
+            </h1>
+            <p class="sub-title">
+                {{'Slogan' | translate}}
+            </p>
+        </div>
         <div id="carouselExampleIndicators" class="carousel" data-ride="carousel">
             <ol class="carousel-indicators">
                 <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
