--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,49 +1,49 @@
 <router-outlet></router-outlet>
 <nav class="navbar navbar-default navbar-dark navbar-fixed-top">
-  <div class="container">
-    <div class="navbar-header page-scroll" >
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+    <div class="container">
+        <div class="navbar-header page-scroll">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
                         <span class="sr-only">Toggle navigation</span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
 
-      <a class="navbar-brand page-scroll" href="#page-top">
-                        <img class="logo" src="assets/images/assetProject/SIGL.png" alt="logo">
-                    </a>
+            <a class="navbar-brand page-scroll test">
+                <img class="logo-sigl" src="assets/images/assetProject/SIGL.png" alt="logo">
+            </a>
+        </div>
+        <div class="collapse navbar-collapse navbar-ex1-collapse">
+            <ul class="nav navbar-nav">
+                <li>
+                    <a class="page-scroll" href="#hero">{{'Home' | translate}}</a>
+                </li>
+                <li>
+                    <a class="page-scroll" href="#about">{{'About' | translate}}</a>
+                </li>
+                <li>
+                    <a class="page-scroll" href="#pricing">{{'Modules' | translate}}</a>
+                </li>
+                <li>
+                    <a class="page-scroll" href="#features">{{'Projects' | translate}}</a>
+                </li>
+                <li>
+                    <a class="page-scroll" href="#faq">{{'Disciplines' | translate}}</a>
+                </li>
+                <li>
+                    <a class="page-scroll" href="#opportunities">{{'Careers' | translate}}</a>
+                </li>
+                <li>
+                    <a class="page-scroll" href="#socials">{{'Social' | translate}}</a>
+                </li>
+                <li>
+                    <img height="24" width="24" style="margin: 15px 0 15px 0" (click)="changeLanguage('fr')" src="./assets/images/flag/France.png" />
+                </li>
+                <li>
+                    <img height="24" width="24" style="margin: 15px 0 15px 4px" (click)="changeLanguage('en')" src="./assets/images/flag/England.png" />
+                </li>
+            </ul>
+        </div>
     </div>
-    <div class="collapse navbar-collapse navbar-ex1-collapse">
-      <ul class="nav navbar-nav">
-        <li>
-          <a class="page-scroll" href="#hero">{{'Home' | translate}}</a>
-        </li>
-        <li>
-          <a class="page-scroll" href="#about">{{'About' | translate}}</a>
-        </li>
-        <li>
-          <a class="page-scroll" href="#pricing">{{'Modules' | translate}}</a>
-        </li>
-        <li>
-          <a class="page-scroll" href="#features">{{'Projects' | translate}}</a>
-        </li>
-        <li>
-          <a class="page-scroll" href="#faq">{{'Disciplines' | translate}}</a>
-        </li>
-        <li>
-          <a class="page-scroll" href="#opportunities">{{'Careers' | translate}}</a>
-        </li>
-        <li>
-          <a class="page-scroll" href="#socials">{{'Social' | translate}}</a>
-        </li>
-        <li>
-         <img  height="24" width="24" style="margin: 15px 0 15px 0" (click)="changeLanguage('fr')" src="./assets/images/flag/France.png"/>
-        </li>
-        <li>
-          <img height="24" width="24" style="margin: 15px 0 15px 4px" (click)="changeLanguage('en')" src="./assets/images/flag/England.png"/>
-        </li>
-      </ul>
-    </div>
-  </div>
 
 </nav>
