--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -1,3 +1,9 @@
-.logo {
-    margin-bottom: 0vh;
+.logo-sigl {
+    /* margin-bottom: 3px; */
+    max-width: 15px;
+    height: auto;
+}
+
+.test {
+    padding: 0px;
 }
