--- a/src/app/homepage.component.html
+++ b/src/app/homepage.component.html
@@ -21,12 +21,13 @@
 <!-- </div> -->
 <!-- /.container -->
 <!-- </section> -->
-<section id="hero">
+<div >
+<section id="hero" >
     <div class="wrap-hero-content">
         <div class="hero-content">
             <h1>
                 <a>
-                    <img class="animation" src="assets/images/LOGO_SIGL.png" style="max-width:35%" alt="logo">
+                    <img id="logo_min" class="animation" src="assets/images/LOGO_SIGL.png" style="max-width:35%" alt="logo">
                 </a>
             </h1>
             <p class="sub-title">
@@ -1325,7 +1326,7 @@
 </section> -->
 
 <!-- footer -->
-
+</div>
 <footer>
     <div class="panel panel-default" id="footer">
         <div class="container">
