--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -3,14 +3,14 @@
     <div class="container">
         <div class="navbar-header page-scroll">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
 
             <a class="navbar-brand page-scroll test">
-                <img class="logo-sigl" src="assets/images/assetProject/SIGL.png" alt="logo">
+                <img id="logo_min" class="logo-sigl" src="assets/images/LOGO_SIGL.png" style="" alt="logo">
             </a>
         </div>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
@@ -37,13 +37,49 @@
                     <a class="page-scroll" href="#socials">{{'Social' | translate}}</a>
                 </li>
                 <li>
-                    <img height="24" width="24" style="margin: 15px 0 15px 0" (click)="changeLanguage('fr')" src="./assets/images/flag/France.png" />
+                    <img height="24" width="24" style="margin: 15px 0 15px 0" (click)="changeLanguage('fr')"
+                        src="./assets/images/flag/France.png" />
                 </li>
                 <li>
-                    <img height="24" width="24" style="margin: 15px 0 15px 4px" (click)="changeLanguage('en')" src="./assets/images/flag/England.png" />
+                    <img height="24" width="24" style="margin: 15px 0 15px 4px" (click)="changeLanguage('en')"
+                        src="./assets/images/flag/England.png" />
                 </li>
             </ul>
         </div>
     </div>
+
+    <style>
+        .logo-sigl {
+            height: 5rem;
+            margin-top: -1.5rem;
+            display: none;
+            -webkit-animation-name: fadeIn;
+            animation-name: fadeIn;
+            -webkit-animation-duration: 1s;
+            animation-duration: 1s;
+            -webkit-animation-fill-mode: both;
+            animation-fill-mode: both;
+        }
+
+        @-webkit-keyframes fadeIn {
+            0% {
+                opacity: 0;
+            }
+
+            100% {
+                opacity: 1;
+            }
+        }
+
+        @keyframes fadeIn {
+            0% {
+                opacity: 0;
+            }
+
+            100% {
+                opacity: 1;
+            }
+        }
+    </style>
 
 </nav>
